--- a/openai.yaml
+++ b/openai.yaml
@@ -2,7 +2,7 @@ openapi: 3.1.0
 info:
   title: Nettspend API
   description: An API that provides information about Nettspend, the rapper.
-  version: "1.0.0"
+  version: 1.0.0
 servers:
   - url: https://api.nettspend.com/v1
     description: Production server
@@ -13,12 +13,12 @@ paths:
       summary: Get information about Nettspend
       description: Returns detailed information about Nettspend, including his real name, background, music career, and influence.
       responses:
-        '200':
+        "200":
           description: Information about Nettspend
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/NettspendResponse'
+                $ref: "#/components/schemas/NettspendResponse"
 components:
   schemas:
     NettspendResponse:
@@ -42,7 +42,10 @@ components:
           items:
             type: string
           description: Artists who influenced Nettspend.
-          example: ["Michael Jackson", "Katy Perry", "Justin Bieber"]
+          example:
+            - Michael Jackson
+            - Katy Perry
+            - Justin Bieber
         careerHighlights:
           type: object
           properties:
@@ -59,19 +62,24 @@ components:
               items:
                 type: string
               description: Rap collectives Nettspend is part of.
-              example: ["Novagang", "1c34"]
+              example:
+                - Novagang
+                - 1c34
             collaborations:
               type: array
               items:
                 type: string
               description: Artists Nettspend has collaborated with.
-              example: ["Xaviersobased", "OsamaSon"]
+              example:
+                - Xaviersobased
+                - OsamaSon
             festivals:
               type: array
               items:
                 type: string
               description: Festivals where Nettspend has performed.
-              example: ["Rolling Loud"]
+              example:
+                - Rolling Loud
         musicStyle:
           type: object
           properties:
@@ -80,7 +88,9 @@ components:
               items:
                 type: string
               description: Genres influencing Nettspend's music.
-              example: ["Trap", "Jerk"]
+              example:
+                - Trap
+                - Jerk
             characteristics:
               type: string
               description: Description of Nettspend's sound.
@@ -94,7 +104,9 @@ components:
           items:
             type: string
           description: Some of Nettspend's notable tracks.
-          example: ["Shine N Peace", "We Not Like You"]
+          example:
+            - Shine N Peace
+            - We Not Like You
         impact:
           type: string
           description: Nettspend's significance in the music scene.
