--- a/openai.yaml
+++ b/openai.yaml
@@ -4,7 +4,7 @@ info:
   description: An API that provides information about Nettspend, the rapper.
   version: 1.0.0
 servers:
-  - url: https://api.nettspend.com/v1
+  - url: https://matix7z.github.io/Nettspend-GPT/openai.yaml
     description: Production server
 paths:
   /nettspend:
